test-suite/typecheck/fail/generic_constraint_violation.first
import * "Prelude"
type Box = { x: Int };
function elem<T : Eq>(x: T, y: T) -> Bool { return x == y; }
function f() -> Bool {
  return elem({ x: 1 }, { x: 2 });
}
